test/tests/stages/18_structures/invalid_types/incompatible_types/assign_different_pointer_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[34]:
  struct
  identifier(s1)
  ;
  struct
  identifier(s2)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s1)
  *
  identifier(p1)
  =
  const int(0)
  ;
  struct
  identifier(s2)
  *
  identifier(p2)
  =
  const int(0)
  ;
  identifier(p2)
  =
  identifier(p1)
  ;
  return
  const int(0)
  ;
  }
